# Wallet-API

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
api/: admin.py  models.py  repository.py  routers.py  serializers.py  views.py
api/migrations/: 0001_initial.py
core/: settings.py
tests/: test_api.py
tests/fixtures/: wallets.json
wallet_app/: settings.py  urls.py
