[project]
name = "wallet-ap"
version = "0.1.0"
authors = [
    {name = "Elena Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "A compact wallet API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.2",
]
